@@ -1,0 +1,3 @@
+prereq: test -e ./wcpncpy
+prog: wcpncpy
+vgopts: -q
